[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/TopDownCharSpriteSheet.png" type="Texture" id=2]
[ext_resource path="res://UI/Level_UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Pistol.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Eyes.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 3 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=12]
radius = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 21.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 6
collision_mask = 4
script = ExtResource( 1 )
bullet = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="CanvasLayer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="CollisionShape2D"]
position = Vector2( 0, -9 )
frames = SubResource( 11 )
animation = "Idle"
frame = 7
playing = true

[node name="EyesArea" type="Area2D" parent="CollisionShape2D/Sprite"]

[node name="EyesArc" type="CollisionShape2D" parent="CollisionShape2D/Sprite/EyesArea"]
position = Vector2( 0, -12 )
shape = SubResource( 12 )

[node name="Position2D" type="Position2D" parent="CollisionShape2D/Sprite/EyesArea/EyesArc"]

[node name="Eyes" type="Sprite" parent="CollisionShape2D/Sprite/EyesArea/EyesArc/Position2D"]
position = Vector2( 1, 0 )
texture = ExtResource( 6 )

[node name="GunArc" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="GunArc"]
position = Vector2( 20, 1 )
scale = Vector2( 0.53, 0.53 )
texture = ExtResource( 4 )

[node name="BulletSpawnPoint" type="Position2D" parent="GunArc/Sprite"]
position = Vector2( 18.8679, -3.77358 )
scale = Vector2( 2, 2 )
